# celeb-ai-art

./: .gitignore  README.md  pyproject.toml  setup.sh  training_config.yaml
.claude/agents/: celeb-ai-art-cli.md
docs/: Claude-Generative AI image model comparison.md  REORGANIZATION_SUMMARY.md  USAGE.md
examples/: basic_usage.py  scraper_example.py
src/: __init__.py  cli.py
src/config/: __init__.py  model_configs.py
src/core/: __init__.py  dataset_manager.py  models.py
src/processing/: __init__.py  augmentation.py  face_detector.py  image_utils.py  quality_assessor.py
src/scrapers/: __init__.py  google_images_scraper.py
src/training/: __init__.py  train_lora.py  train_lora_flux.py  train_lora_sdxl.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  caption_generator.py  dataset_organizer.py
